# countries-dataset

./: .gitattributes  LICENSE  README.md  hello.py  pyproject.toml  requirements.txt
data/cleaned/: co2_exported.csv  data.csv  forest_exported.csv
data/raw/: caloric_data.csv
data/raw/ambiental_analysis/: EDGARv7.0_FT2021_fossil_CO2_booklet_2022.xlsx
data/raw/technological_innovation/: exports_percentages.csv  exports_values.csv  journal_articles.csv  not_integrated_data.csv  null_values.csv
html/: 02_group_questions.html  environment_analysis.html  indv_03_dietary_analysis.html
scripts/: dev_setup.py
src/: 01_introduction_and_processing.ipynb  02_group_questions.ipynb  dataprocessing.ipynb  environment_analysis.ipynb  exploratory_analysis.ipynb  forested_area_analysis.ipynb  indv_03_dietary_analysis.ipynb  technological_innovation_analysis.ipynb
src/dashboard/: agrupamiento.py  app.py  plots.py  visualisation.ipynb
