[project]
name = "countries-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "polars[pyarrow]>=1.20.0",
    "pyarrow>=19.0.0",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "setuptools>=70.0.0",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}


[project.scripts]
dev-setup = "scripts.dev_setup:main"

[tool.ruff]

fix = true
show-fixes = true

include = ["pyproject.toml", "src/**/*.py", "src/**/*.ipynb", "scripts/**/*.py"]

[tool.ruff.lint]

ignore = ["F841", "E203", "E501"]

[tool.ruff.format]

docstring-code-format = true

[tool.mypy]

ignore_missing_imports = true
