[project]
name = "countries-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "kneed>=0.8.5",
    "matplotlib>=3.10.0",
    "mlxtend>=0.23.4",
    "nbformat>=5.10.4",
    "numpy>=2.2.2",
    "plotly>=6.0.0",
    "plotnine>=0.14.5",
    "polars[pyarrow]>=1.20.0",
    "pyarrow>=19.0.0",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shiny>=1.2.1",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "voila>=0.5.8",
]

[dependency-groups]
dev = [
    "setuptools>=70.0.0",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}


[project.scripts]
dev-setup = "scripts.dev_setup:main"

[tool.ruff]

fix = true
show-fixes = true

include = ["pyproject.toml", "src/**/*.py", "src/**/*.ipynb", "scripts/**/*.py"]

[tool.ruff.lint]

ignore = ["F841", "E203", "E501"]

[tool.ruff.format]

docstring-code-format = true

[tool.mypy]

ignore_missing_imports = true
